--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@babel/core": "^7.20.5",
     "@babel/preset-env": "*",
     "browserlist": "*",
-    "jasmine": "*",
+    "jasmine": "^5.1.0",
     "jquery": "*",
     "webpack": "*",
     "webpack-cli": "*"
