--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "browserlist": "*",
     "jasmine": "^5.1.0",
     "jquery": "*",
-    "webpack": "*",
-    "webpack-cli": "*"
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4"
   },
   "packageManager": "yarn@3.2.1"
 }
