--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@babel/preset-env": "*",
     "browserlist": "*",
     "jasmine": "^5.1.0",
-    "jquery": "*",
+    "jquery": "^3.7.0",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
   },
