--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
   },
   "homepage": "https://github.com/ndp/git-cheatsheet#readme",
   "devDependencies": {
-    "@babel/cli": "*",
-    "@babel/core": "^7.20.5",
-    "@babel/preset-env": "*",
+    "@babel/cli": "^7.22.10",
+    "@babel/core": "^7.22.10",
+    "@babel/preset-env": "^7.22.10",
     "browserlist": "*",
     "jasmine": "^5.1.0",
     "jquery": "^3.7.0",
